# peer_server_tests

./: .gitignore  README.md  config.js  index.html  ui.js
connection/: index.html  ui.js
native/async-ssl/: CMakeLists.txt  clean_project.sh  main.cpp  start.sh
umconnect/: package-lock.json  package.json
umconnect/public/: index.html  manifest.json
umconnect/src/: App.css  App.js  index.js
umconnect/src/components/: LoginContainer.js  ViewLocal.js  ViewRemote.js
umconnect/src/components/about/: DialotAbout.js
umconnect/src/components/app/: App.js
umconnect/src/components/call/: actionTypes.js  actions.js  constants.js  reducer.js
umconnect/src/components/config/: DialogConnectivity.js  constants.js  functions.js
umconnect/src/components/controls/: ButtonBase.js  ButtonCall.js  ButtonDialogCancel.js  ButtonDialogOk.js  ButtonHangup.js  ButtonRegister.js  WebRtcStateInfo.js
umconnect/src/components/dialogs/: DialogBase.js  DialogCallConfirm.js  DialogCallRejected.js  DialogContainer.js  actions.js
umconnect/src/components/menu/: MenuMain.js  MenuWrap.js  functions.js  reducer.js  sidebar..bak.js  sidebar.js
umconnect/src/components/peer-server/: actionTypes.js  actions.js  errors.js  functions.js  index.js  logger.js  middleware.js  reducer.js
umconnect/src/css/: App.css  Buttons.css  DialogAbout.css  Dialogs.css  Menu.css  TextInput.css  ViewLocal.css  ViewMain.css  ViewRemote.css  WebRtcStateInfo.css  test.css
umconnect/src/images/: index.js
webrtc/: config.js  index.html  index.js  media.js  peer_server.js  ui.js  webrtc.js
(+22 files in other folders)
